# mailing_service

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  cron.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: fill.py
mailing/migrations/: 0001_initial.py  0002_remove_newsletter_is_active_and_more.py  0003_alter_newsletter_at_date_alter_newsletter_status.py  0004_remove_newsletter_at_date_newsletter_end_date_and_more.py  0005_alter_newsletter_start_date.py  0006_newsletter_name.py  0007_alter_newsletter_name_alter_newsletter_periodicity_and_more.py  0008_client_user.py  0009_newsletter_user.py  0010_message_user.py  0011_alter_newsletter_clients_alter_newsletter_message_and_more.py  0012_alter_newsletter_clients_alter_newsletter_message_and_more.py  0013_alter_newsletter_clients_alter_newsletter_message.py  0014_alter_newsletter_options.py  0015_alter_newsletter_options.py
mailing/templates/mailing/: attempt_list.html  base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home_page.html  message_confirm_delete.html  message_detail.html  message_form.html  (+5 more)
users/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
(+8 files in other folders)
